fixed twitter meta card stuff

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,13 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Quick & customisable ways to take payments" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@AlfonzoMillions" />
+    <meta name="twitter:title" content="PaymentsPage.io" />
+    <meta name="twitter:description" content="Create, customise, embed. The quick way to take payments" />
+    <meta name="twitter:image" content="paymentspage-logo.png" />
+
     <link rel="apple-touch-icon" href="paymentspage-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
