--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:site" content="@AlfonzoMillions" />
     <meta name="twitter:title" content="PaymentsPage.io" />
     <meta name="twitter:description" content="Create, customise, embed. The quick way to take payments" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/paymentspage-logo.png" />
+    <meta name="twitter:image" content="https://www.paymentspage.io/paymentspage-logo.png" />
 
     <link rel="apple-touch-icon" href="paymentspage-logo.png" />
     <!--
