--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Quick & customisable ways to take payments" />
+    <meta name="description" content="Customise, embed, get paid. The quick way to take payments" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AlfonzoMillions" />
     <meta name="twitter:title" content="PaymentsPage.io" />
-    <meta name="twitter:description" content="Create, customise, embed. The quick way to take payments" />
+    <meta name="twitter:description" content="Customise, embed, get paid. The quick way to take payments" />
     <meta name="twitter:image" content="https://www.paymentspage.io/paymentspage-logo.png" />
 
     <link rel="apple-touch-icon" href="paymentspage-logo.png" />
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>paymentspage.io - quick & customisable payments -</title>
+    <title>paymentspage.io - customise, embed, get paid. -</title>
 </head>
 
 <body class="has-animations">
